--- a/a1-6.4-abschlusstest.html
+++ b/a1-6.4-abschlusstest.html
@@ -80,3 +80,38 @@
   <script src="../../scripts/script.js"></script>
   <script src="../../../scripts/second-script.js"></script>
 </html>
+
+
+Übung zu „Gefühle, Aussehen, Charakter und Zustand/Dinge“:
+1. Übersetze die folgenden Sätze ins Englische:
+a) Der Hund ist traurig.
+b) Die Blumen sind schön.
+c) Mein Zimmer ist sauber.
+d) Die Frau ist nett.
+e) Der Junge ist laut.
+f) Der Apfel ist alt.
+
+2. Setze das richtige Adjektiv ein:
+a) Das Baby ist ______. (ruhig)
+b) Der Tisch ist ______. (schmutzig)
+c) Mein Freund ist ______. (freundlich)
+d) Dein Pullover ist ______. (hässlich)
+e) Die Katze ist ______. (müde)
+f) Der Mann ist ______. (groß)
+
+3. Vervollständige die Sätze mit dem passenden Wort:
+a) Ich bin ______, weil es so schön ist. (glücklich / traurig)
+b) Mein Auto ist ______, aber ich möchte ein neues. (alt / neu)
+c) Die Musik ist so ______, dass ich den Film nicht hören kann. (laut / ruhig)
+d) Heute ist mein Freund ______, er hat die ganze Nacht nicht geschlafen. (müde / krank)
+e) Meine Schwester ist immer ______ und hilft mir bei allem. (nett / schmutzig)
+f) Mein Hund ist ______, er schläft gerne. (ruhig / laut)
+
+4. Beantworte die folgenden Fragen auf Deutsch:
+a) Wie bist du heute? (Gefühl)
+b) Wie ist deine beste Freundin? (Charakter)
+c) Wie sieht dein Zimmer aus? (Zustand)
+d) Wie ist das Wetter draußen? (Gefühl oder Zustand)
+e) Was ist dein Lieblingsbuch? Warum? (Aussehen oder Zustand)
+
+5. Schreibe einen kurzen Text (5-6 Sätze) über dich und benutze mindestens fünf Adjektive aus den Kategorien (Gefühl, Aussehen, Charakter, Zustand).
